@@ -1,0 +1,14 @@
+  <!-- Bootstrap core JavaScript-->
+  <script src="{{ asset('js/Admin/jquery.min.js') }}"></script>
+  <script src="{{ asset('js/Admin/bootstrap.bundle.min.js') }}"></script>
+
+  <!-- Core plugin JavaScript-->
+  <script src="{{ asset('js/Admin/jquery.easing.min.js') }}"></script>
+
+  <!-- Custom scripts for all pages-->
+  <script src="{{ asset('js/Admin/sb-admin.min.js') }}"></script>
+
+
+</body>
+
+</html>
