@@ -1,6 +1,5 @@
 @include('templates.Admin.header')
-@yield('title')
-@yield('content')
 @include('templates.Admin.mainleft')
+@include('templates.Admin.footer')
 
 
